100-random/01-json-config

--- a/100-random/01-json-config/config/config.json
+++ b/100-random/01-json-config/config/config.json
@@ -1,10 +1,10 @@
 {
     "Env": "dev",
     "Port": 8000,
-    "Database": {
-        "DBname": "testdb",
-        "DBurl": "localhost",
-        "DBuser": "username",
-        "DBpass": "password"
+    "DB": {
+        "Name": "testdb",
+        "URL": "localhost",
+        "User": "username",
+        "Pass": "password"
     }
 }
